<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/padding_login"
    android:background="#fff"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_signup"
        android:textStyle="bold"
        android:textColor="#896335"
        android:textSize="20sp"
        android:id="@+id/emp_title"
        android:gravity="center_horizontal"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:id="@+id/goto_login"
        android:textSize="20sp"
        android:text="@string/already_reg"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:src="@drawable/skillindia"
        android:id="@+id/imageView2"
        android:layout_below="@+id/emp_title"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emp_reg_aadhaar"
                android:maxLength="12"
                android:ellipsize="end"
                android:maxLines="1"
                android:inputType="number"
                android:hint="@string/aadhaar"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/Email"
                android:drawableLeft="@drawable/mail"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/password"
                android:id="@+id/reg_password"
                android:ellipsize="end"
                android:maxLines="1"
                android:password="true"
                android:inputType="textPassword"
                android:hint="@string/passoword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:id="@+id/register"
            android:text="@string/register"/>

    </LinearLayout>

</RelativeLayout>